testsuite/tests/indexed-types/should_compile/T15711.hs
{-# LANGUAGE TypeFamilies, DataKinds #-}

module Bug where

class C a where
  type F (x :: Maybe a)
